--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -41,8 +41,8 @@
       <h1 id="restaurant-name"></h1>
       <div id="restaurant-img-container">
         <picture class="restaurant-img" id="restaurant-picture">
-          <source id="restaurant-picture-large" media="(min-width: 700px)">
-          <source id="restaurant-picture-medium" media="(min-width: 350px)">
+          <source id="restaurant-picture-large" media="(min-width: 1000px)">
+          <source id="restaurant-picture-medium" media="(min-width: 400px)">
           <img class="restaurant-img" id="restaurant-img">
         </picture>
       </div>
