--- a/index.html
+++ b/index.html
@@ -30,24 +30,30 @@
     <section id="filters">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select aria-label="Select neighborhoods" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select aria-label="Select neighborhoods" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurantsAndFilters()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select aria-label="Select cuisines" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select aria-label="Select cuisines" id="cuisines-select" name="cuisines" onchange="updateRestaurantsAndFilters()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
       <ul id="restaurants-list"></ul>
     </section>
   </main>
-
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-
+  
   <footer role="contentinfo" id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
+
+  <div id="online-status-container">
+    <h2>The browser is offline</h2>
+    <p>Please stay calm!</p>
+    <p>We will store your reviews offline :-)</p>
+  </div>
+  
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
 
 </body>
 
