--- a/restaurant.html
+++ b/restaurant.html
@@ -48,11 +48,42 @@
     <section id="reviews-container" aria-label="Restaurant reviews">
       <ul id="reviews-list"></ul>
     </section>
+    <section id="review-form-section" aria-label="A form to submit new reviews">
+      <div id="review-form-container">
+        <h2>A New Review</h2>
+        <form id='review-form' onsubmit="test" action="">
+          <input id="input-message-id" name="id" type="hidden" value="">
+          <input id="input-id" name="id" type="hidden" value="">
+          <input id="input-date" name="date" type="hidden" value="">
+          <label for="input-name">Name: </label>
+          <input id="input-name" name="name" type="text" value="" placeholder="Your name" aria-label="Your name">
+          <br>
+          <label for="input-rating">Rating: </label>
+          <input id="input-rating" name="rating" type="text" value="" placeholder="Rating from 1 to 5" aria-label="Rating from 1 to 5">
+          <br>
+          <label for="input-comments">Review: </label>
+          <textarea id="input-comments" name="comments" type="text" value="" placeholder="Please write a short review" aria-label="Please write a short review" rows="4"></textarea>
+          <br>
+          <input id="review-form-button" type="button" role="button" value="Submit" aria-label="Submit the review">
+          <div style="clear: both;"></div>
+        </form>
+      </div>
+      <div id='pending-review-info'>
+        <h3>Thanks for submitting your review! It will get to the site once your browser is back online!</h3>
+      </div>
+    </section>
   </main>
-
+  
   <footer role="contentinfo" id="footer">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
+
+  <div id="online-status-container">
+    <h2>The browser is offline</h2>
+    <p>Please stay calm!</p>
+    <p>We will store your reviews offline :-)</p>
+  </div>
+
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <script type="text/javascript" src="js/restaurant_info.js"></script>
